fix clearable filter